--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "devDependencies": {
     "angular": "~1.4.6",
-    "lumx": "~0.3.83"
+    "lumx": "~0.3.83",
+    "underscore": "~1.8.3"
   }
 }
